Actions
Bug #14137
closedcxgbetool cudbg dumps core if called without options
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
$ cxgbetool /dev/t4nex0 cudbg zsh: segmentation fault (core dumped) cxgbetool /dev/t4nex0 cudbg $ mdb core Loading modules: [ libc.so.1 ld.so.1 ] > $C 0803bc08 libc.so.1`strcmp+0x162(0, 8079072) 0803bc28 check_option+0x1d(0, 3, fed9b8d5, fecf34ed) 0803bc78 get_cudbg+0x36(3, 803bd20, 3, 803be1e) 0803bc98 run_cmd+0x5a(3, 803bd20, 803be1e, 805e80f, 803bcd0, 80bb000) 0803bcb8 main+0x33(803bcbc, fee19628, 803bcf8, 80539db) 0803bcf8 _start_crt+0x9a(3, 803bd20, fc0b7ac1, 0, 0, 0) 0803bd14 _start+0x1a(3, 803be14, 803be1e, 803be2a, 0, 803be30)
To test the fix, I ran cxgbetool /dev/t4nex0 cudbg
without specifying any options, and got (somewhat) useful diagnostic message instead of coredump.
Updated by Yuri Pankov 8 months ago
- Description updated (diff)
- Status changed from New to Pending RTI
- Assignee set to Yuri Pankov
- % Done changed from 0 to 90
- Difficulty changed from Medium to Bite-size
Updated by Electric Monk 7 months ago
- Status changed from Pending RTI to Closed
- % Done changed from 90 to 100
git commit 65ecf39910b97501cd4a7cddd37a5177aba96025
commit 65ecf39910b97501cd4a7cddd37a5177aba96025 Author: Yuri Pankov <ypankov@tintri.com> Date: 2021-10-08T14:11:37.000Z 14137 cxgbetool cudbg dumps core if called without options 14138 cxgbetool does not need to reinvent err() Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions