14137 cxgbetool cudbg dumps core if called without options 14138 cxgbetool does not need to reinvent err() Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>